syntax = "proto3";

import "svg.proto";

package transport_catalogue_proto;

message Coordinates {
	double latitude = 1;
	double longitude = 2; 
}

message Map {
	double width = 1;
	double height = 2;
	double padding = 3;
	double line_width = 4;
	double stop_radius = 5;
	
	double bus_label_font_size = 6;
	Coordinates bus_label_offset = 7;

	double stop_label_font_size = 8;
	Coordinates stop_lable_offset = 9;

	Color underlayer_color = 10;
	double underlayer_width = 11;

	repeated Color color_palette = 12;
}