syntax = "proto3";

package transport_catalogue_proto;

message Rgb {
	uint32 red = 1;
	uint32 green = 2;
	uint32 blue = 3;
}

message Rgba {
	uint32 red = 1;
	uint32 green = 2;
	uint32 blue = 3;
	double opacity = 4;
}

message StringColor {
	bytes color = 1;
}

message Color {
	 Rgb rgb = 1;
	 Rgba rgba = 2;
	 StringColor color_string = 3;
}
