syntax = "proto3";

import "graph.proto";

package transport_catalogue_proto;

message BusEdgeInfo {
	string name_bus = 1;
	uint32 span_count = 2;
	uint32 number_edge = 3;
}

message WaitEdgeInfo {

}

message  EdgeInfo {
	oneof edge_info {
		BusEdgeInfo bus_edge_info = 1;
		WaitEdgeInfo wait_edge_info = 2;
	}
}

message MapStopVertex {
	string key = 1;
	uint32 value = 2;
}

message RoutindSetting {
	int64 bus_wait_time = 1;
	double bus_velocity = 2;
}

message TransportRouter {
 repeated MapStopVertex stop_vertex_id = 1;
 repeated string vertex_info = 2;
 repeated EdgeInfo edges_info = 3; 
 Graph graph =4;
 Router graph_router = 5;
 RoutindSetting routing_settings = 6;
 }